# Functional_Quantization_of_infinitedimensional_vernoi_tasslelations-

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  vercel.json
.github/workflows/: ci.yml
applications/seismic_hazard/: README.md  __init__.py  correlation.py  fq_idcvt.py  geometry.py  gmm.py  simulation.py
data/: README.md
docs/: algorithms.md  background.md  reproducibility.md  results_guide.md
fq/: __init__.py  analysis.py  core.py  data.py  plots.py  runner.py
fq/algorithms/: __init__.py  ann_fq.py  base.py  ce_le.py  ce_mb.py  hk.py  ht.py  kd_ann_fq.py  kn.py  le.py  lk.py  lx.py  mb.py  mr_fq.py  rp_ann_fq.py  rp_ce_le.py  svd_ce_le.py
notebooks/: 01_algorithm_benchmark.ipynb  02_seismic_hazard.ipynb  03_add_your_own_method.ipynb
results/sample/: master_summary.csv
scripts/: make_sample_gallery.py  run_benchmark.py  run_seismic.py
site/: index.html
site/algorithms/: index.html
site/assets/: app.js  data.js  style.css
site/assets/data/: table_N_sensitivity.csv  table_fq_method_comparison.csv  table_resolution_scaling.csv
site/seismic/: index.html
tests/: conftest.py  test_algorithms.py  test_core.py  test_seismic.py
