[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fq-random-fields"
version = "0.1.0"
description = "Functional quantization algorithms for random fields and seismic hazard maps"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Sena Mursel"},
  {name = "Daniel Conus"},
  {name = "Wei-Min Huang"},
  {name = "Manuel Miranda"},
  {name = "Paolo Bocchini"},
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "psutil",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "jupyter", "nbconvert", "papermill"]

[tool.setuptools.packages.find]
include = ["fq*", "applications*"]
